--- a/EmpireDirectory/EmpireDirectory.csproj
+++ b/EmpireDirectory/EmpireDirectory.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Jedi.cs" />
     <Compile Include="Models\Rank.cs" />
+    <Compile Include="Models\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
