ActionResult Detail and JediDetail-view

--- a/EmpireDirectory/EmpireDirectory.csproj
+++ b/EmpireDirectory/EmpireDirectory.csproj
@@ -227,6 +227,7 @@
     <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\AddJedi.cshtml" />
+    <Content Include="Views\Home\JediDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
