Moved Jedi Details View to partial

--- a/EmpireDirectory/EmpireDirectory.csproj
+++ b/EmpireDirectory/EmpireDirectory.csproj
@@ -227,7 +227,9 @@
     <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\AddJedi.cshtml" />
-    <Content Include="Views\Home\JediDetail.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Home\_JediPartial.cshtml" />
+    <Content Include="Views\Home\_BountyHunterPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
