--- a/EmpireDirectory/EmpireDirectory.csproj
+++ b/EmpireDirectory/EmpireDirectory.csproj
@@ -207,8 +207,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
@@ -230,6 +228,9 @@
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\_JediPartial.cshtml" />
     <Content Include="Views\Home\_BountyHunterPartial.cshtml" />
+    <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Home\_JediEdit.cshtml" />
+    <Content Include="Views\Home\_BountyHunterEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
